--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Space+Mono:wght@400;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
-    <title>Document</title>
+    <title>Rotating text logo</title>
     <script src="radial.js" defer></script>
 </head>
 
 <body>
     <div class="logo">
-        <p class="radial">Gorilla Shop - the  best urbanware for concrete jungle! </p>
+        <p class="radial">Gorilla Shop - the best urbanware for concrete jungle! </p>
         <img src="./monkey.png" alt="gorilla logo">
     </div>
 </body>
